Update uvision export templates to support bootloader/headers

--- a/tools/export/uvision/uvision_debug.tmpl
+++ b/tools/export/uvision/uvision_debug.tmpl
@@ -11,6 +11,7 @@
 				<uTrg>1</uTrg>
 				<nTsel>11</nTsel>
 				<pMon>{{device.debug_interface.bin_loc}}</pMon>
+				<tIfile>./debug_init.ini</tIfile>
 			</DebugOpt>
 			<TargetDriverDllRegistry>
 				<SetRegEntry>
